@@ -1,3 +1,6 @@
+Changelog v5.1.98 (2025-04-12):
+- Added Fuzzy Match Sensitivity option
+
 Changelog v5.1.97 (2025-04-11):
 - Replaced Fuzzypacks with difflib
 
